--- a/deployments/fern-platform-kubevela.yaml
+++ b/deployments/fern-platform-kubevela.yaml
@@ -595,8 +595,8 @@ spec:
         - keycloak
       properties:
         # Use ghcr.io/guidewire-oss/fern-platform:latest or docker.io/guidewireoss/fern-platform:latest
-        image: fern-platform:latest
-        imagePullPolicy: Never
+        image: ghcr.io/guidewire-oss/fern-platform:0.1.0
+        imagePullPolicy: Always
         namespace: fern-platform
         ports:
           - port: 8080
